--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,27 @@
   --dark-main-background-color: #111;
 }
 
+@font-face {
+  font-family: Oxygen;
+  src: url(Oxygen-Regular.ttf);
+}
+
+@font-face {
+  font-family: Oxygen;
+  src: url(Oxygen-Bold.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: Oxygen;
+  src: url(Oxygen-Light.ttf);
+  font-weight: light;
+}
+
+* {
+  font-family: Oxygen;
+}
+
 /*
  * CSS RESET
  *
